@@ -7,18 +7,13 @@ Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
 		i gotta check for dhcp in the network stuff and emerge it if necessary?
-		<agaffney> codeman: ok, so addNotification("warning", ...) for something
-		  that failed but isn't a big deal, 'raise GLIException("blah", 
-		  "kindabad", ...)' for something that *might* be fixable with a profile
-		  edit, and 'raise GLIException("blah", "fatal", ...)' for the "oh my 
-		  god, I crapped my pants" errors
 		
 	DialogFE:
 		Add networking setup for CC <whisper>samyron</whisper>
 		Add functionality to handle 'warning' and 'notice' level exceptions
 		  see above^^
-		custom kernel and kernel bootsplash options. (codeman)
 		update partitioning stuff (agaffney) (sorry)
+		
 	gtkFE:
 		Progress bar. (agaffney)
 		custom kernel and kernel bootsplash options.
@@ -26,10 +21,11 @@ Things still needing to be done for the ALPHA release (on experimental livecd):
 Things to put into the BETA release:
 	Add add_groups to ALL the files
 	Add binary kernel option for ALL files.
-	
+	Fix the hacked up exception code.
 
 Done:
 Add custom kernel code. (codeman)
 Fix bootloader code for udev. (codeman)
 Add rest of add_users and fix overwriting user info bug (codeman and agaffney)
 Switch most outputs to tty8 (codeman)
+custom kernel and kernel bootsplash options. (codeman)
