@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.63 2005/02/04 00:03:25 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.64 2005/02/06 04:51:25 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  5 Feb 2005; Preston Cody <codeman@gentoo.org>
+  Changed the raising of 'warning' exceptions to a simple log of the error
+  so that the installer can continue.
 
   3 Feb 2005; Preston Cody <codeman@gentoo.org>
   Some big changes.  First, changed most output to display_on_tty8.
